--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,13 @@ venv/
 .vscode/
 *.pyc
 *.json
-.venv/
+.Python
+[Bb]in
+[Ii]nclude
+[Ll]ib
+[Ll]ib64
+[Ll]ocal
+[Ss]cripts
+pyvenv.cfg
+.venv
+pip-selfcheck.json
